[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dopplrhub"
version = "0.1.0"
description = "Python SDK for the DopplrHub public API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]
authors = [
  { name = "DopplrHub" }
]
license = { text = "Proprietary" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
